Transfer Data from Views to Controllers 1)Controllers Request Property – Request.Form

--- a/UnderstandingControllersViews/Views/Home/Index.cshtml
+++ b/UnderstandingControllersViews/Views/Home/Index.cshtml
@@ -2,7 +2,23 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+@* <div class="text-center">
+
+	<p>Welcome From<b> Index View </b>of<b> Home Controller </b> </p>
+</div> *@
+<form asp-action="ReceivedDataByRequest">
+	<div class="form-group">
+		<label>Name:</label>
+		<input class="form-control" name="name"/>
+	</div>
+	<div class="form-group">
+		<label>Sex:</label>
+		<select class="form-control" name="sex">
+			<option value="M">Male</option>
+			<option value="F">Female</option>
+		</select>
+	</div>
+	<div class="m-1">
+		<button class="btn btn-primary" type="submit">Submit</button>
+	</div>
+</form>
