--- a/UnderstandingControllersViews/Views/Home/Index.cshtml
+++ b/UnderstandingControllersViews/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
 
 	<p>Welcome From<b> Index View </b>of<b> Home Controller </b> </p>
 </div> *@
-<form asp-action="ReceivedDataByRequest">
+<form asp-action="ReceivedDataByParameter">
 	<div class="form-group">
 		<label>Name:</label>
 		<input class="form-control" name="name"/>
