Passing data from Query String

--- a/UnderstandingControllersViews/Views/Home/Index.cshtml
+++ b/UnderstandingControllersViews/Views/Home/Index.cshtml
@@ -6,6 +6,9 @@
 
 	<p>Welcome From<b> Index View </b>of<b> Home Controller </b> </p>
 </div> *@
+
+<a href="/Home/ReceivedDataByParameter?name=Jack Sparrow&sex=M" class="link-primary">Primary Link</a>
+
 <form asp-action="ReceivedDataByParameter">
 	<div class="form-group">
 		<label>Name:</label>
