--- a/UnderstandingControllersViews/Views/Home/Index.cshtml
+++ b/UnderstandingControllersViews/Views/Home/Index.cshtml
@@ -11,18 +11,18 @@
 @* <a href="/Home/ReceivedDataByParameter?name=Jack Sparrow&sex=M" class="link-primary">Primary Link</a> *@
 
 @* <form asp-action="ReceivedDataByParameter"> *@
-<form asp-action="ReceivedDataByModelBinding">
+<form method="post" enctype="multipart/form-data">
 	<div class="form-group">
-		<label>Name:</label>
-		<input class="form-control" asp-for="name"/>
+		<label>Photo:</label>
+		<input type="file" class="form-control" name="photo" />
 	</div>
-	<div class="form-group">
+	@* <div class="form-group">
 		<label>Sex:</label>
 		<select class="form-control" asp-for="sex">
 			<option value="M">Male</option>
 			<option value="F">Female</option>
 		</select>
-	</div>
+	</div> *@
 	<div class="m-1">
 		<button class="btn btn-primary" type="submit">Submit</button>
 	</div>
