--- a/UnderstandingControllersViews/Views/Home/TestLayout.cshtml
+++ b/UnderstandingControllersViews/Views/Home/TestLayout.cshtml
@@ -1,2 +1,13 @@
-﻿<h2 class="text-primary">Test Layout Start Here </h2>
+﻿
+@section Top{
+	<div class="pb-3 mb-2 bg-primary text-white">This is Top</div>
+}
+@section Bottom{
+	<div class="pb-3 mb-2 bg-info text-white">This is Bottom</div>
+}
+@section Script {
+<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+}
+
+<h2 class="text-primary">Test Layout Start Here </h2>
 <p class="text-success">This text is comming from child view</p>
