Layout Optional Sections
@RenderSection("Ads") to @RenderSection("Ads", false)

--- a/UnderstandingControllersViews/Views/Shared/_Layout.cshtml
+++ b/UnderstandingControllersViews/Views/Shared/_Layout.cshtml
@@ -51,7 +51,10 @@
         </main>
     </div>
     @RenderSection("Bottom")
-    @RenderSection("Script")
+
+    @RenderSection("Ads")
+
+    @RenderSection("Script",false)
 
 
 
