ASP.NET Core View Components
Example: Simple View Component

--- a/UnderstandingControllersViews/Views/Shared/_Layout.cshtml
+++ b/UnderstandingControllersViews/Views/Shared/_Layout.cshtml
@@ -44,6 +44,10 @@
         </nav>
     </header>
 
+    <div class="p-3 mb-2 border border-info">
+        @await Component.InvokeAsync("Cart")
+    </div>
+
     @RenderSection("Top")
     <div class="container">
         <main role="main" class="pb-3">
