--- a/UnderstandingControllersViews/Views/Shared/_Layout.cshtml
+++ b/UnderstandingControllersViews/Views/Shared/_Layout.cshtml
@@ -45,7 +45,7 @@
     </header>
 
     <div class="p-3 mb-2 border border-info">
-        @await Component.InvokeAsync("Cart")
+        @await Component.InvokeAsync("Cart", new {showCart = true})
     </div>
 
     @RenderSection("Top")
